Fix name cases, fix chord plot text alignment, move chord plot inline styling

--- a/css/plots.css
+++ b/css/plots.css
@@ -8,3 +8,10 @@
 .promiscuity-plot-container {
     min-height: 100px;
 }
+
+.chord-plot-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 400px;
+}
